# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /
 definitions:
+  handlers.AssignRoleRequest:
+    properties:
+      role:
+        type: string
+    required:
+    - role
+    type: object
   handlers.LoginRequest:
     properties:
       password:
@@ -201,6 +208,53 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Update a user
+      tags:
+      - users
+  /api/v1/users/{id}/role:
+    put:
+      consumes:
+      - application/json
+      description: Assign a new role to a user (admin only)
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: New role
+        in: body
+        name: role
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.AssignRoleRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Assign a role to a user
       tags:
       - users
   /login:
